# CollatzTester

./: CMakeLists.txt  CollatzManager.py  CollatzSolver.cpp  main.cpp  test.py
source/: CollatzSolution.cpp  CollatzSolution.h  CollatzSolver.cpp  CollatzSolver.h  Database.cpp  Database.h  DatabaseInstance.cpp  DatabaseInstance.h  ElementsHolder.cpp  ElementsHolder.h  FutureHolder.h  ThreadPool.cpp  ThreadPool.h
